(fix) add gap between project name & trash icon.
(fix) remove debuggers.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -106,6 +106,8 @@ body {
   display: flex;
   flex-direction: row;
 
+  gap: 0.5rem;
+
 }
 
 .del-project {
